updated social share icon, size and alignment fixed

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -2,4 +2,6 @@ ul.social-share li {
     list-style: none;
     display: inline;
     margin: 10px 5px;
+    padding-left: 0px;
+    margin: 0px;
 }
